Add Update Delete

--- a/src/views/sample.ejs
+++ b/src/views/sample.ejs
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    Hello world
-    <script src="app.js"></script>
+    Hello, I am Dinh Phat Phat
+    <img src="/images/dinhphatphat.jpg" alt="dasdsa">
 </body>
 
 </html>
